Fix css of projects section to not be too wide on desktop

--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ section{
     gap: 2rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    flex-wrap: wrap;
 }
   
 .about-details-container {
@@ -399,13 +400,14 @@ section{
   
 .details-container {
     padding: 1.2rem;
-    flex: 1;
+    flex: 1 1 300px;
     background: white;
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
     margin: 0 auto;
+    max-width: 500px;
 }
 
 .details-container2 {
